docs(docs/代码与提交规范文档): 增加类型标注要求
    新增类型标注要求，希望代码中函数参数与返回值具有类型标注。

--- a/docs/代码与提交规范文档.md
+++ b/docs/代码与提交规范文档.md
@@ -3,7 +3,7 @@
 ## 文档信息
 
 - **文档编号**：YOLOFIRE-003
-- **版本**：1.0
+- **版本**：1.1
 - **作者**：WaterMinding
 - **创建日期**：2025年6月15日
 - **更新日期**：2025年6月15日
@@ -19,6 +19,7 @@
 - PEP8基本内容
   - [PEP 8 – Style Guide for Python Code | peps.python.org](https://peps.python.org/pep-0008/)
 - 请务必确保代码遵守PEP8规范，并使一行代码的长度不超过79个字符（含空格）
+- **如有可能，请为函数的参数与返回值增加类型标注。**
 
 ---
 
