fix(代码与提交规范文档.md): 修正了文档中合并命令错误
    文档“拉取更新与上传”部分 git merge develop 有误，
    应当为 git merge 你的分支名称。

    现已更正。

--- a/docs/代码与提交规范文档.md
+++ b/docs/代码与提交规范文档.md
@@ -89,7 +89,7 @@
   git checkout 你的分支名称 # 切换回你的分支
   git rebase develop # 将本地你的分支变基到develop分支
   git checkout develop # 再切换到本地develop分支
-  git merge develop # 将本地你的分支合并到本地develop分支
+  git merge 你的分支名称 # 将本地你的分支合并到本地develop分支
   git push origin develop # 将更新并合并后的develop分支更新到你的fork仓库
   ```
 
